--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,4 @@ bh_unicode_properties.cache
 # https://packagecontrol.io/packages/sublime-github
 GitHub.sublime-settings
 *.yaml
+Fall2023/IntroToProof.pdf
